--- a/src/app/overall-map/overall-map.component.html
+++ b/src/app/overall-map/overall-map.component.html
@@ -1,3 +1,3 @@
-<canvas id="canvasOne" width="1024" height="768" #canvasOne>
+<canvas id="canvasOne" #canvasOne>
     Your browser does not support HTML5 Canvas.
 </canvas>
